GNOME Bugzilla – Bug 578541
preloads /apps/panel/general too late
Last modified: 2009-08-12 14:40:35 UTC
Requests key /apps/panel/general/profiles_migrated the preloads that subtree immediately: gconf trace (gnome-panel.25066): Doing remote query for /apps/panel/general/profiles_migrated gconf trace (gnome-panel.25066): Adding directory '/apps/panel/general' gconf trace (gnome-panel.25066): Adding notify to engine at '/apps/panel/general' gconf trace (gnome-panel.25066): Onelevel preload of '/apps/panel/general' gconf trace (gnome-panel.25066): Caching values in '/apps/panel/general' gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/profiles_migrated' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/object_id_list' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/enable_program_list' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/applet_id_list' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/show_program_list' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/enable_autocompletion' to the cache gconf trace (gnome-panel.25066): Added value of '/apps/panel/general/toplevel_id_list' to the cache gconf trace (gnome-panel.25066): Mark '/apps/panel/general' as fully cached
diff --git a/gnome-panel/panel-profile.c b/gnome-panel/panel-profile.c index 5e71b23..99cc8c6 100644 --- a/gnome-panel/panel-profile.c +++ b/gnome-panel/panel-profile.c @@ -2514,12 +2514,12 @@ panel_profile_load (void) client = panel_gconf_get_client (); + gconf_client_add_dir (client, PANEL_CONFIG_DIR "/general", GCONF_CLIENT_PRELOAD_ONELEVEL, NULL); + panel_compatibility_maybe_copy_old_config (client); panel_compatibility_migrate_panel_id_list (client); - gconf_client_add_dir (client, PANEL_CONFIG_DIR "/general", GCONF_CLIENT_PRELOAD_ONELEVEL, NULL); - panel_profile_load_list (client, PANEL_CONFIG_DIR, PANEL_GCONF_TOPLEVELS,
Created attachment 140544 [details] [review] Fix GConf key preloading Attaching content from comment #1 as a proper patch
Please commit. Gabor, one small note for the commit message :-) Something like this should be used: =========== [panel] Make sure to preload /apps/panel/general early enough http://bugzilla.gnome.org/show_bug.cgi?id=578541 =========== (read ChangeLog to know the detailed instructions for the commit format) Thanks!