[panel] Make sure to preload /apps/panel/general early enough

http://bugzilla.gnome.org/show_bug.cgi?id=578541